@@ -1,7 +1,9 @@
 package seng202.team3.gui;
 
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+import javafx.concurrent.Task;
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 import javafx.fxml.FXML;
@@ -10,12 +12,14 @@ import javafx.scene.control.*;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.VBox;
 import javafx.scene.shape.Rectangle;
+import javafx.util.StringConverter;
 import org.controlsfx.control.RangeSlider;
 import seng202.team3.models.WineAttribute;
 import seng202.team3.repository.Table;
 import seng202.team3.services.SearchScreenService;
 import seng202.team3.services.WineManager;
 import seng202.team3.models.SearchWineList;
+import seng202.team3.models.Wine;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -41,7 +45,16 @@ public class SearchScreenController {
     private RangeSlider priceRangeSlider;
 
     @FXML
+    private TextField lowPriceTextField;
+
+    @FXML
+    private TextField highPriceTextField;
+
+    @FXML
     private TextField searchBarTextField;
+
+    @FXML
+    private VBox searchResultsVBox;
 
     @FXML
     private ComboBox<Integer> startDateComboBox;
@@ -57,6 +70,9 @@ public class SearchScreenController {
 
     @FXML
     private AnchorPane rootAnchorPane;
+
+    @FXML
+    private ScrollPane wineScrollPane;
 
     @FXML
     private Rectangle searchWinesRectangle;
@@ -151,21 +167,27 @@ public class SearchScreenController {
         addStyleClasses();
         initialiseDateRangeComboBoxes();
 
-        SearchWineList previousSearch = FXWrapper.getInstance().getPreviousSearch();
-        if (previousSearch == null) {
-            previousSearch = WineManager.getInstance().searchWines(
-                    searchBarTextField.getText(),
-                    lowYear,
-                    highYear,
-                    (float) priceRangeSlider.getLowValue(),
-                    (float) priceRangeSlider.getHighValue(),
-                    selectedCountry,
-                    selectedColour,
-                    selectedFullness,
-                    selectedVariety);
-            FXWrapper.getInstance().setPreviousSearch(previousSearch);
-        }
-        FXWrapper.getInstance().loadWineListView(previousSearch, searchResultsAnchorPane, wineDetailsAnchorPane);
+        StringConverter<Number> converter = new StringConverter<>() {
+            @Override
+            public String toString(Number number) {
+                return String.valueOf(number.intValue());
+            }
+            @Override
+            public Number fromString(String s) {
+                try {
+                    return Integer.parseInt(s);
+                }
+                catch (NumberFormatException e) {
+                    return null;
+                }
+            }
+        };
+        lowPriceTextField.textProperty().bindBidirectional(priceRangeSlider.lowValueProperty(), converter);
+        highPriceTextField.textProperty().bindBidirectional(priceRangeSlider.highValueProperty(), converter);
+        lowPriceTextField.setTextFormatter(new TextFormatter<>(change -> change.getControlNewText().matches("\\d*") ? change : null));
+        highPriceTextField.setTextFormatter(new TextFormatter<>(change -> change.getControlNewText().matches("\\d*") ? change : null));
+
+        getSearchResults(); //Loads all wines into results box
     }
 
     /**
@@ -176,32 +198,52 @@ public class SearchScreenController {
      */
     @FXML
     void onSearchButtonClicked(ActionEvent event) {
+        searchButton.setDisable(true);
         FXWrapper.getInstance().clearPane(wineDetailsAnchorPane);
-        WineManager wineManager = WineManager.getInstance();
+        getSearchResults();
+    }
 
-        SearchWineList results = wineManager.searchWines(
-                searchBarTextField.getText(),
-                lowYear,
-                highYear,
-                (float) priceRangeSlider.getLowValue(),
-                (float) priceRangeSlider.getHighValue(),
-                selectedCountry,
-                selectedColour,
-                selectedFullness,
-                selectedVariety);
 
-        FXWrapper.getInstance().loadWineListView(results, searchResultsAnchorPane, wineDetailsAnchorPane);
+    private void getSearchResults() {
+        Task<Void> task = new Task<>() {
+            @Override
+            protected Void call() {
+                SearchWineList results = WineManager.getInstance().searchWines(
+                        searchBarTextField.getText(),
+                        lowYear,
+                        highYear,
+                        (float) priceRangeSlider.getLowValue(),
+                        (float) priceRangeSlider.getHighValue(),
+                        !"All".equals(selectedCountry) ? selectedCountry : null,
+                        !"All".equals(selectedColour) ? selectedColour : null,
+                        !"All".equals(selectedFullness) ? selectedFullness : null,
+                        !"All".equals(selectedVariety) ? selectedVariety : null);
 
-        if (results.getWineList().isEmpty()) {
-            infoTextLabel.setText("Unfortunately there were no results for your search. Try checking your spelling or broadening your filters.");
-            infoTextRectangle.setOpacity(1);
-            infoTextLabel.setOpacity(1);
-        } else {
-            infoTextRectangle.setOpacity(0);
-            infoTextLabel.setOpacity(0);
-        }
+                FXWrapper.getInstance().setPreviousSearch(results);
 
-        FXWrapper.getInstance().setPreviousSearch(results);
+                Platform.runLater(() -> {
+
+                    FXWrapper.getInstance().loadWineListView(results, searchResultsAnchorPane, wineDetailsAnchorPane);
+
+                    if (results.getWineList().isEmpty()) {
+                        infoTextLabel.setText("Unfortunately there were no results for your search. Try checking your spelling or broadening your filters.");
+                        infoTextRectangle.setOpacity(1);
+                        infoTextLabel.setOpacity(1);
+                    } else {
+                        infoTextRectangle.setOpacity(0);
+                        infoTextLabel.setOpacity(0);
+                    }
+
+                });
+                return null;
+            }
+        };
+
+        task.setOnSucceeded(e -> searchButton.setDisable(false));
+
+        Thread thread = new Thread(task);
+        thread.setDaemon(true);
+        thread.start();
     }
 
     /**
@@ -227,7 +269,7 @@ public class SearchScreenController {
 
         List<Integer> years = IntStream.rangeClosed(2007, 2019)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
         ObservableList<Integer> yearList = FXCollections.observableArrayList();
         yearList.add(null);
         yearList.addAll(years);
@@ -270,6 +312,8 @@ public class SearchScreenController {
         varietyComboBox.getStyleClass().add("fifteen-combo-box");
         fullnessComboBox.getStyleClass().add("fifteen-combo-box");
         searchBarTextField.getStyleClass().add("sign-in-screen-text-field");
+        lowPriceTextField.getStyleClass().add("sign-in-screen-text-field");
+        highPriceTextField.getStyleClass().add("sign-in-screen-text-field");
     }
 
     /**
